applications/xihe-new/xihe-script/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xihe-script
  namespace: xihe-new
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: xihe-script
  template:
    metadata:
      labels:
        app: xihe-script
    spec:
      containers:
      - name: xihe-script
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/xihe-script:v1.0.20221122113307
        imagePullPolicy: IfNotPresent
        args:
        - --config-file=/opt/app/config/config.yaml
        resources:
          requests:
            cpu: 2000m
            memory: 2000Mi
          limits:
            cpu: 2000m
            memory: 4000Mi
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /opt/app/config/config.yaml
          name: config
          subPath: config.yaml
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: 1Gi
      - name: config
        configMap:
          name: py-configmap
