applications/xihe-new/xihe-script/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: xihe-script-service
  namespace: xihe-new
spec:
  ports:
    - name: httpport
      port: 80
      targetPort: 8080
  selector:
    app: xihe-script
  type: ClusterIP
