applications/xihe-new/xihe-script/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: xihe-script-ingress
  namespace: xihe-new
spec:
  tls:
    - hosts:
        - xihescript.test.osinfra.cn
      secretName: xihe-script-tls
  rules:
    - host: xihescript.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: xihe-script-service
              servicePort: 80
            path: /
